# svakosh

backend/: .dockerignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  pyrightconfig.json  run.py
backend/.github/workflows/: ci.yml
backend/app/: config.py  error_handlers.py  main.py  responses.py
backend/app/api/endpoints/: health.py
backend/app/api/endpoints/auth/: controllers.py  models.py  routes.py  utils.py
backend/app/api/endpoints/profile/: controllers.py  models.py  router.py
backend/app/api/endpoints/watchlist/: constants.py  controllers.py  models.py  router.py  utils.py
backend/app/database/: __init__.py  database.py
backend/app/utils/: utils.py
frontend/: .gitignore  .prettierignore  README.md  eslint.config.js  package.json  pnpm-lock.yaml  svelte.config.js  vite.config.ts
frontend/src/: app.css  app.d.ts  app.html
frontend/src/lib/api/: api-response.ts  client.ts  index.ts
frontend/src/lib/auth/: cookies.ts
frontend/src/lib/brand/: index.ts  svakosh.ts
frontend/src/lib/components/: Background.svelte  EmptyState.svelte  MobileMenu.svelte
frontend/src/lib/config/: index.ts  presets.ts  resolve.ts
frontend/src/lib/server/: auth-refresh.ts  backend-fetch.ts  backend-proxy.ts  watchlist-proxy.ts
frontend/src/lib/store/: auth.svelte.ts  ui.svelte.ts
frontend/src/lib/utils/: cn.ts  const.ts  helper.ts  index.ts
frontend/src/routes/: +error.svelte  +layout.server.ts  +layout.svelte  +page.svelte
frontend/src/routes/(app)/: +layout.server.ts  +layout.svelte  +page.svelte
frontend/src/routes/auth/_lib/: types.ts
(+241 files in other folders)
