# Dependencies: use `uv add` / `uv remove` — commit pyproject.toml + uv.lock together.
[project]
name = "svakosh-api"
version = "0.1.0"
description = "Svakosh FastAPI backend"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.135.1",
    "motor>=3.6",
    "pydantic-settings>=2.13.1",
    "python-dotenv>=1.2.2",
    "redis[hiredis]>=5.0",
    "uvicorn[standard]>=0.42.0",
]

[project.scripts]
svakosh-api = "run:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
